Changes for 1.1:

 - fixed EventLog for Win32 ZABBIX agent, thanks to "bcheese" (Eugene)
 - developed aggrgated graphs (Eugene)
 - improved graphs, added selector of data calculation function (Eugene)
 - fixed popup of trigger selection (Eugene)

Changes for 1.1beta12:

 - added support of serial GSM modems for SMS (Alexei)
 - fixed SQL requests escaping for oracle server (Eugene)
 - support of web.page.regexp[] (Alexei)
 - support of web.page.perf[] (Alexei)
 - support of web.page.get[] (Alexei)
 - added whitespaces stripping (Eugene)
 - improved "system.run[]" key, added <wait>|<nowait> mode (Eugene)
 - added support of "system.cpu.util[]" key for HPUX (Eugene)
 - added support of "proc.num[]" key for AIX 4.x (Eugene)
 - added support of value type Text (Alexei) 
 - fixed "Server info" screen item (Eugene)
 - fixed "Host info" screen item (Eugene)
 - fixed "Trigger info" screen item (Eugene)
 - dropped suport of delays between actions due to bad design (Alexei)
 - fixed incorrect handling of actions (Alexei)
 - fixed bad performance of previous beta because of wrong DBselectN() (Alexei)
 - added support for direct sending of SMS via GSM modem (Alexei)
 - fixed syncing of graphs with templates (Alexei)
 - fixed typo in MySQL's schema.sql (Alexei)
 - fixed applying of actions having Trigger Value in condition (Alexei)
 - fixed evaluation of aggregate functions (Alexei)

Changes for 1.1beta11:

 - fixed PostgreSQL schema (Alexei)
 - fixed items grouping of Data overview screen (Eugene)
 - fixed image storing for oracle (Eugene)
 - eliminated function DBaffected_rows() (Alexei)
 - new function DBselectN() to select N records only. (Alexei)
 - fixed graph duplication (Eugene)
 - fixed oracle SQL request creating (Eugene)
 - fixed first host selection from list of accessed hosts (Eugene)
 - fixed evaluation of action's conditions (Alexei)
 - fixed agent.ping in Windows agent (Alexei)
 - cleaned SQL statements to have mod() instead of % (Alexei)